# Rpi-Pico-Mandelbrot-Physical-Display

./: CMakeLists.txt  EPD_7in3f_test.cpp  EPD_Test.h  fractal_display.cpp  fractal_display.h  fractals.cpp  fractals.h
Config/: DEV_Config.cpp
GUI/: GUI_BMPfile.h  GUI_Paint.cpp  GUI_Paint.h
e-Paper/: EPD_7in3f.cpp  EPD_7in3f.h  EPD_7in5_HD.h  EPD_7in5_V2.cpp  EPD_7in5_V2.h
